--- a/vignettes/SpaPheno-tutorial.Rmd
+++ b/vignettes/SpaPheno-tutorial.Rmd
@@ -36,12 +36,16 @@ library(BiocStyle)
 
 ## Introduction
 
-**SpaPheno** is an R package designed to identify, visualize, and interpret spatial phenotype associations from spatial transcriptomics and simulated bulk data. It enables users to:
+**SpaPheno** is an R package designed to identify, visualize, and interpret spatial phenotype associations from spatial transcriptomics and simulated bulk data. Linking spatial transcriptomic patterns to clinical phenotypes is essential for advancing precision oncology. We introduce SpaPheno, an interpretable machine learning framework that bridges spatial transcriptomic data with clinically annotated bulk RNA-seq datasets. SpaPheno integrates Elastic Net regression with SHAP-based interpretation to identify spatially localized features—such as cell types and tissue regions—that are predictive of patient survival, tumor stage, and immunotherapy response. Through comprehensive simulations and applications to spatial datasets from primary liver cancer, kidney renal clear cell carcinoma (KIRC), breast cancer (BRCA), and melanoma, SpaPheno demonstrates superior performance and broad applicability. By jointly optimizing predictive power and biological interpretability, SpaPheno enables the discovery of clinically meaningful spatial biomarkers, offering a generalizable approach for spatially informed precision medicine.
 
 - **Construct predictive models** from cell type compositions and phenotypic labels (e.g., disease presence).
 - **Map spatial risk distributions** across tissues or organs using spatially-aware neighborhood features.
 - **Assess statistical significance** through permutation-based tests.
 - **Interpret feature contributions** using SHAP (SHapley Additive exPlanations) analysis at single-cell resolution.
+
+```{r, echo=FALSE, out.width="80%", out.height="80%", dpi=600, fig.align="center", fig.cap="The Overview of SpaPheno"}
+knitr::include_graphics("./figures/workflow.jpg")
+```
 
 ## Installation
 
