--- a/vignettes/SpaPheno-tutorial.Rmd
+++ b/vignettes/SpaPheno-tutorial.Rmd
@@ -38,7 +38,7 @@ library(BiocStyle)
 
 Linking spatial transcriptomic patterns to clinically relevant phenotypes is a critical step toward spatially informed precision oncology. Here, we introduce SpaPheno, an interpretable machine learning framework that integrates spatial transcriptomics with clinically annotated bulk RNA-seq data to uncover spatially resolved biomarkers predictive of patient outcomes. Leveraging Elastic Net regression combined with SHAP-based attribution, SpaPheno uniquely identifies spatial features at multiple scales—from tissue regions to specific cell types and individual spatial spots—that are associated with patient survival, tumor stage, and immunotherapy response. We demonstrate the robustness and generalizability of SpaPheno through comprehensive simulations and applications spanning primary liver cancer, clear cell renal cell carcinoma, breast cancer, and melanoma. Across these diverse settings, SpaPheno achieves high predictive accuracy while providing biologically meaningful and spatially precise interpretations. Our framework offers a powerful and extensible approach for translating complex spatial omics data into actionable clinical insights, accelerating the development of precision oncology strategies grounded in tumor spatial architecture.
 
-**SpaPheno** is an R package designed to identify, visualize, and interpret spatial phenotype associations from spatial transcriptomics and simulated bulk data. Here are Key Features:
+Here are Key Features of **SpaPheno**:
 
 - **Integration of spatial transcriptomics with clinically annotated bulk RNA-seq data**
 
@@ -76,6 +76,7 @@ if (!require("BiocManager", quietly = TRUE)) {
 
 # SpaPheno installation
 # devtools::install_github("Duan-Lab1/SpaPheno", dependencies = c("Depends", "Imports", "LinkingTo"))
+# install.packages("SpaPheno_0.0.1.tar.gz", repos = NULL, type = "source")
 
 library(SpaPheno)
 library(tidyverse)
